# LinearRegressionFromScratch

./: .gitignore  CMakeLists.txt  INFO.md  README.md  lib-install.sh  main  main.cpp
bindings/: bindings.cpp
include/: batchgradientdescent.h  gradientdescent.h  linearregression.h  normalequation.h
install/: INSTALL.md  README.md  example.cpp  example.py  lib-install-python.sh  lib-install.sh  testscript.sh
src/: batchgradientdescent.cpp  gradientdescent.cpp  linearregression.cpp  main.cpp  normalequation.cpp  stochasticgradientdescent.cpp
tests/: CMakeLists.txt  batch_grad_test.cpp  lin_reg_test.cpp  norm_eq_test.cpp  test_main.cpp
